--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
               </article>
               <article>
-                <img src="./imagenes/b" alt="Wordpress icon" class="icon" />
+                <img src="./imagenes/black-wordpress-icon.png" alt="Wordpress icon" class="icon" />
                 <div>
                   <h3>Wordpress</h3>
                 </div>
@@ -279,7 +279,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="amandaandreis04@gmail.com">Email</a></p>
+          <p><a href="mailto:amandaandreis04@gmail.com">Email</a></p>
         </div>
         <div class="contact-info-container">
           <img
