--- a/index.html
+++ b/index.html
@@ -226,6 +226,24 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
+                src="./imagenes/mandaos.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Manda-OS: LFS</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/amandandreis/Manda-OS-LFS/'"
+              >
+                Github
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
                 src="./imagenes/rubber ducky.png"
                 alt="Project 1"
                 class="project-img"
@@ -258,7 +276,8 @@
                 Github
               </button>
             </div>
-          </div>
+          </div> 
+          
           </div>
         </div>
       </div>
