--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <p class="section__text__p2">Software Developer and System Administrator</p>
         <div class="btn-container">
           <a href="https://drive.google.com/uc?export=download&id=1MfmVHLdFk-ucMh8U_XMkAls00DcXDdje" class="btn btn-color-2" download="CV_Amanda_Andreis.png">Download CV</a>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+          <button class="btn btn-color-2" onclick="location.href='./#contact'">
+            <a>Contact Info</a>
           </button>
         </div>
         <div id="socials-container">
