--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
         <p class="section__text__p2">Software Developer and System Administrator</p>
         <div class="btn-container">
           <a href="https://drive.google.com/uc?export=download&id=1MfmVHLdFk-ucMh8U_XMkAls00DcXDdje" class="btn btn-color-2" download="CV_Amanda_Andreis.png">Download CV</a>
-          <button class="btn btn-color-2" onclick="location.href='./#contact'">
-            <a>Contact Info</a>
-          </button>
+          <button class="btn btn-color-2" onclick="location.href='./#contact'">Contact Info</button>
         </div>
+        
         <div id="socials-container">
           <img
             src="imagenes/linkedin.png"
@@ -168,6 +167,12 @@
                 </div>
               </article>
               <article>
+                <img src="./imagenes/ruby_logo.png" alt="Ruby icon" class="icon" />
+                <div>
+                  <h3>Ruby</h3>
+                </div>
+              </article>
+              <article>
                 <img src="./imagenes/apache.png" alt="Apache icon" class="icon" />
                 <div>
                   <h3>Apache</h3>
@@ -195,6 +200,12 @@
                 </div>
               </article>
               <article>
+                <img src="./imagenes/Wireshark_icon_new.png" alt="Wireshark icon" class="icon" />
+                <div>
+                  <h3>Wireshark</h3>
+                </div>
+              </article>
+              <article>
                 <img src="./imagenes/bash.png" alt="Bash icon" class="icon" />
                 <div>
                   <h3>Bash</h3>
@@ -204,6 +215,12 @@
                 <img src="./imagenes/GIT.png" alt="Wordpress icon" class="icon" />
                 <div>
                   <h3>Git</h3>
+                </div>
+              </article>
+              <article>
+                <img src="./imagenes/logo_fortinet.png" alt="Fortinet icon" class="icon" />
+                <div>
+                  <h3>Fortinet</h3>
                 </div>
               </article>
             </div>
