--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="section__text">
         <p class="section__text__p1">ECHO "hello, my name is" ></p>
         <h1 class="title">Amanda Andreis</h1>
-        <p class="section__text__p2">Software Developer and System Administrator</p>
+        <p class="section__text__p2">Network and System Administrator</p>
         <div class="btn-container">
           <a href="https://drive.google.com/uc?export=download&id=1MfmVHLdFk-ucMh8U_XMkAls00DcXDdje" class="btn btn-color-2" download="CV_Amanda_Andreis.png">Download CV</a>
           <button class="btn btn-color-2" onclick="location.href='./#contact'">Contact Info</button>
